Actualize issues types

--- a/act_report.html
+++ b/act_report.html
@@ -13483,7 +13483,8 @@ In this picture we have indicated in yellow the original account @dog_rates, the
 <ul>
 <li>In this part we are going to investigate how good or bad are the prediction methods. Expecifically we want to know if they are good predicting whether the picture is of a dog or not. To know this we are going to extract a random sample of 300 pictures and check them by ourserlves. We have decided if there is a dog in the picture or not and we have saved it in the dataframe as a boolean value. Our criteria is very subjective, we have decided to put a yes in all cases that there is a dog in the picture, even if it is not the main objective, if there are other animals in front of them or it or if they are too far or blurred. But it can be a reference to compare the other three methods.</li>
 </ul>
-<p>Once that we have this 300 pictures we can do bootstrapping to calculate the range of proportion of dogs in all the pictures with a confidence interval of 95%, and compare this values with the proportions given by the predictors.</p>
+<p>Once that we have this 300 pictures we can do bootstrapping to calculate the range of proportion of dogs in all the pictures with a confidence interval of 95%, and compare this values with the proportions given by the predictors:</p>
+<p><img src=pictures/dist_prop.jpg alt="drawing" width="700"/></p>
 
 </div>
 </div>
